--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
   },
   "scripts": {
     "start": "node server.js",
-  "server": "json-server --watch db.json --port 5000",
-  "client": "npm start --prefix client",
-  "dev": "concurrently \"npm run server\" \"npm run react-todo\"",
-  "build": "npm run build --prefix client"
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
